--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    <link rel="stylesheet" href="~/Content/estilos.css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/jquery-3.2.1.min (1).js"></script>
 </head>
 <body>
     <div id="wrapperMain">
         <header>
             <div id="wrapperHeader">
                 <div class="logo">
-                    <img src="http://mudalia.com/wp-content/themes/mudalia/images/logo.png" />
+                    <img src="~/Content/Logo Completo.png" />
                     <div class="izquierdo">
                         <nav>
                             <p>Mándenos un Mail: <strong>info@mudalia.com</strong> / Llámenos al Teléfono:<strong>91 367 91 72</strong></p>
