--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Home/Index.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Home/Index.cshtml
@@ -16,3 +16,57 @@
         </div>
     </div>
 </section>
+<div class="separador"></div>
+<section>
+    <div id="wrapperServicios">
+
+        <h1>Nuestros Servicios</h1>
+       
+        @foreach (var item in ViewBag.servicio)
+        {       
+        <article>
+            <img class="imagen" src="@item.Imagen"/>
+            <div class="@item.Id marco" ></div>
+            <h2><span>Servicio: </span>@item.Nombre</h2>
+            @if(item.Descripcion.Length > 89)
+            { <h4>@item.Descripcion.ToString().Substring(0, 88)→</h4> }
+            else
+            {<h4>@item.Descripcion.ToString()→</h4>}
+            <h6>@Html.ActionLink("Ver Mas", "Index","Paquete", new { id = item.Id, nombre = item.Nombre }, null)</h6>
+            <script>
+                $(function () {
+
+                    var randomColor = Math.floor(Math.random() * 16777215).toString(16);
+
+                    $(".@item.Id").css({
+
+                        backgroundColor: '#' + randomColor
+
+                    });
+
+                    $("#colorcode").text("#" + randomColor);
+
+                });
+            </script>
+        </article>        
+        }
+        
+        <div class="fondoAmarillo">
+            <img  src="~/Content/edge-cream.svg" />
+        </div>
+     </div>     
+    <div style="clear:both"></div>
+</section>
+<br /><br />
+<div class="separador"></div>
+<section>
+    <div id="wrapperPresentacion">
+        <article>
+            <h2>
+                PODEMOS OCUPARNOS DE SU MUDANZA
+            </h2>
+            <h4>Mudanzas profesionales para empresas y oficinas, así como mudanzas de hogar baratas, así como servicio de guardamuebles. Disponemos de grúas montamuebles por fachada. También de material para mudanzas, como embalaje para objetos especiales</h4>
+        </article>
+    </div>
+</section>
+<div class="separador"></div>
