--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Content/Formulario.css
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Content/Formulario.css
@@ -1,8 +1,9 @@
 ﻿.Formulario {
-    width: 80%;
-    padding: 15% 10%;
+    width: 74%;
+    padding: 8% 12%;
     text-align: center;
-    background:gray;
+    background: rgba(128, 128, 128, 0.10196078431372549);
+    margin: 0 auto;
 }
 .Formulario2 {
     border-radius: 20px;
@@ -54,12 +55,12 @@ textarea {
     padding: 5%;
 }
 .btn {
-    width: 32%;
-    padding: 3%;
+    width: 25%;
+    padding: 1% 3%;
     background-color: #ff7a7a;
     color: white;
     border: none;
-    margin: 5% 40%;
+    margin: 5% 49%;
     border-color: #ff7a7a;
     border: 2px solid;
 }
