--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Recuperar.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Recuperar.cshtml
@@ -1,11 +1,16 @@
 ﻿
 @{
+    ViewBag.Title = "Recuperar";
+}
+
+
+@{
     ViewBag.Title = "Login";
 }
 <div class="Formulario">
     <div class="Formulario2">
-        <h2>Login</h2>
-        @using (Html.BeginForm("Sesion", "Sesion"))
+        <h2>Recuperar Contraseña</h2>
+        @using (Html.BeginForm("EnviarCorreo", "Sesion"))
         {
             <div class="form-horizontal">
                 <div class="form-group">
@@ -14,17 +19,8 @@
                         <input type="email" name="email" class="BotonEstilo" />
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="LabelEstilo">Password</label>
-                    <div class="col-md-10">
-                        <input type="password" name="password" class="BotonEstilo" />
-                    </div>
-                </div>
-
                 <button type="submit" class="btn btn-default">Enviar</button>
             </div>
         }
     </div>
 </div>
-
-
