--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-3.2.1.min (1).js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 </head>
 <body>
     <div id="wrapperMain">
