--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Servicio/Index.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Servicio/Index.cshtml
@@ -26,17 +26,16 @@
     </p>
     <table class="table">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
+            <th colspan="2">
+                @Html.DisplayNameFor(model => model.Nombre)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Imagen)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Mostrar)
             </th>
+
             <th>
-                @Html.DisplayNameFor(model => model.Nombre)
+                @Html.DisplayNameFor(model => model.Descripcion)
             </th>
             <th></th>
         </tr>
@@ -44,17 +43,17 @@
         @foreach (var item in ViewBag.servicio)
         {
             <tr>
-                <td>
-                    @item.Descripcion
+                <td >
+                   <img src=" @item.Imagen"/> 
                 </td>
                 <td>
-                    @item.Imagen
+                    @item.Nombre
                 </td>
                 <td>
                     @item.Mostrar
                 </td>
                 <td>
-                    @item.Nombre
+                    @item.Descripcion
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
