--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Registrarse.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Registrarse.cshtml
@@ -52,13 +52,34 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "LabelEstilo" })
+                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "LabelEstilo"})
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "password", @type="password" } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class = "LabelEstilo">Confirmar Password</label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "confirm_password",  @type = "password" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <script>
+                    var password = document.getElementById("password")
+                        , confirm_password = document.getElementById("confirm_password");
 
+                    function validatePassword() {
+                        if (password.value != confirm_password.value) {
+                            confirm_password.setCustomValidity("Passwords Don't Match");
+                        } else {
+                            confirm_password.setCustomValidity('');
+                        }
+                    }
+
+                    password.onchange = validatePassword;
+                    confirm_password.onkeyup = validatePassword;
+                </script>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
