--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Content/estilo720.css
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Content/estilo720.css
@@ -71,7 +71,7 @@
         }
 
         #wrapperHeader ul {
-            font-size: 14px;
+            font-size: .5em;
             margin: 0;
             padding: 0;
             display: block;
