--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Login.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Login.cshtml
@@ -25,13 +25,13 @@
                 <div class="form-group">
                     <label class="LabelEstilo">Email</label>
                     <div class="col-md-10">
-                        <input type="email" name="email" class="BotonEstilo" />
+                        <input type="email" name="email" class="BotonEstilo" required/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="LabelEstilo">Password</label>
                     <div class="col-md-10">
-                        <input type="password" name="password" class="BotonEstilo" />
+                        <input type="password" name="password" class="BotonEstilo"  required/>
                     </div>
                 </div>
 
