--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Create.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Create.cshtml
@@ -7,7 +7,7 @@
     <div id="wrapperBanner">
         <div class="background">
             <div class="banner">
-                <img src="https://s3.amazonaws.com/files.bannersnack.net/banners/bxtkyhkkg/images/jpg" />
+                <img src="~/Content/Banner1.png" />
             </div>
         </div>
         <div class="raya"></div>
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "BotonEstilo", @type = "number" } })
+                        @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "BotonEstilo", @type = "number", @step = "1", @required = true , @min="1"} })
                         @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Detalle, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Detalle, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Detalle, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Detalle, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Fecha, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "datepicker BotonEstilo", @type = "Date" } })
+                        @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "datepicker BotonEstilo", @type = "datetime-local" } })
                         @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
