--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Details.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Details.cshtml
@@ -3,11 +3,25 @@
 @{
     ViewBag.Title = "Details";
 }
+<section>
+    <div id="wrapperBanner">
+        <div class="background">
+            <div class="banner">
 
-<h2>Details</h2>
-
-<div>
-    <h4>preCita</h4>
+                <img src="~/Content/BannerChido.gif" />
+            </div>
+        </div>
+        <div class="raya"></div>
+        <div class="slogan">
+            <h2>Detalles de Cita</h2>
+            <P>cita!! @Html.DisplayFor(model => model.Id)</P>
+            <img src="~/Content/edge-candy.svg" />
+        </div>
+    </div>
+</section>
+<h2>Detalles</h2>
+<div class="wrapperDetalle">
+    <h4>Cita</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,21 +64,6 @@
             @Html.DisplayFor(model => model.Fecha)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Latitud)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Latitud)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Longitud)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Longitud)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Terminado)
@@ -99,8 +98,9 @@
         </dd>
 
     </dl>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
