--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Index.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Cita/Index.cshtml
@@ -29,7 +29,7 @@
             <div class="cuadro">
                 @foreach (var item in Model)
                 {
-                    if (item.Aceptado==true) { 
+                    if (item.Aceptado==true && item.Terminado==false) { 
                     <div class="elemento">
                         <table>
                             <tr>
@@ -64,7 +64,7 @@
                             </tr>
                         </table>
                         <a href="@Url.Action("Details", "Cita",new {id = item.Id}, null)"><img src="~/Content/iconos/edit schedule.png" /> </a>
-                        <a href=""><img src="~/Content/iconos/delete.png" /> </a>
+                        <a href="@Url.Action("Terminar", "Cita",new {id = item.Id}, null)">  <img src="~/Content/iconos/history.png" /> </a>
                     </div>
                     }
                 }
@@ -75,7 +75,7 @@
             <div class="cuadro">
                 @foreach (var item in Model)
                 {
-                    if (item.Aceptado == false)
+                    if (item.Aceptado == false && item.Terminado == false)
                     {
                     <div class="elemento">
                         <table>
@@ -111,7 +111,7 @@
                             </tr>
                         </table>
                         <a href="@Url.Action("Confirmar", "Cita",new {id = item.Id}, null)"><img src="~/Content/iconos/confirm.png" /> </a>
-                        <a href=""><img src="~/Content/iconos/cancel.png" /> </a>
+                        <a href="@Url.Action("Eliminar", "Cita",new {id = item.Id}, null)"><img src="~/Content/iconos/cancel.png" /> </a>
                     </div>
                     }
                 }
