--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Home/Index.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Home/Index.cshtml
@@ -7,8 +7,9 @@
     <div id="wrapperBanner">
         <div class="background">
             <div class="banner">
-               
-                <img src="~/Content/BannerChido.gif" />
+
+                <img src="~/Content/Banner1.png" />
+                
             </div>
         </div>
         <div class="raya"></div>
