--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Servicio/Create.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Servicio/Create.cshtml
@@ -31,28 +31,22 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Mostrar, htmlAttributes: new { @class = "LabelEstilo" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Mostrar, new { htmlAttributes = new { @class = "BotonEstilo" } })
-                        @Html.ValidationMessageFor(model => model.Mostrar, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.Descripcion, new { htmlAttributes = new { @class = "" } })
+                        @Html.TextAreaFor(model => model.Descripcion, new { htmlAttributes = new { @class = "", @required = true } })
                         @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Imagen, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Imagen, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Imagen, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Imagen, "", new { @class = "text-danger" })
                     </div>
                 </div>
