--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Recuperacion.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Recuperacion.cshtml
@@ -1,10 +1,24 @@
-﻿@model MudanzasGuaymasWeb.SrvSesion.Usuario
+﻿@model MudanzasGuaymasWeb.SrvUsuario.Usuario
 
 @{
     ViewBag.Title = "Recuperacion";
 }
-
-<h2>Recuperacion</h2>
+<section>
+    <div id="wrapperBanner">
+        <div class="background">
+            <div class="banner">
+                <img src="~/Content/NumeroBannerTR.gif" />
+            </div>
+        </div>
+        <div class="raya"></div>
+        <div class="slogan">
+            <h2>Recuperar mi contraseña</h2>
+            <P>Recuperar!!</P>
+            <img src="~/Content/edge-candy.svg" />
+        </div>
+    </div>
+</section>
+<h2>Ingrese su nueva contraseña</h2>
 
 @using (Html.BeginForm("cambiarPass","Sesion"))
 {
@@ -14,21 +28,12 @@
         <h4>Usuario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
-
+       
         @Html.HiddenFor(model => model.Id)
-
         <div class="form-group">
-            @Html.LabelFor(model => model.Llave, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "LabelEstilo" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Llave, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Llave, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @required = true} })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
