--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Registrarse.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Sesion/Registrarse.cshtml
@@ -29,9 +29,16 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
+                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "LabelEstilo" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
                     @Html.LabelFor(model => model.Apellido, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -39,29 +46,23 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "BotonEstilo", @type = "email" } })
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "BotonEstilo", @type = "email", @required = true } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "LabelEstilo" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "BotonEstilo" } })
-                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "LabelEstilo"})
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "password", @type="password" } })
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "password", @type="password", @required = true } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     <label class = "LabelEstilo">Confirmar Password</label>
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "confirm_password",  @type = "password" } })
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "BotonEstilo", @id = "confirm_password",  @type = "password", @required = true } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -83,7 +84,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "BotonEstilo", @required = true } })
                         @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -92,7 +93,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "LabelEstilo" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Tipo, new { htmlAttributes = new { @class = "BotonEstilo" } })
+                        @Html.EditorFor(model => model.Tipo, new { htmlAttributes = new { @class = "BotonEstilo"  } })
                         @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
                     </div>
                 </div>
