--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Shared/_Layout.cshtml
@@ -15,13 +15,18 @@
     <div id="menuMovil">
         <input type="checkbox" class="checkbox" id="menu-toogle" />
         <label for="menu-toogle" class="menu-toogle"></label>
+
         <nav class="nav">
+            <div class="logo">
+                <img src="~/Content/logoBlanco.png" width="200" />
+                <p>Mudanzas Flores</p>
+            </div>
             <div class="nav__item current"><img src="~/Content/iconos/Home.png" />  @Html.ActionLink("Home", "Index", "Home")</div>
-            <div class="nav__item"> <img src="~/Content/iconos/QuienesSomos.png" /> @Html.ActionLink("¿Quienes Somos", "Nosotros", "Home")</div>
+            <div class="nav__item"> <img src="~/Content/iconos/QuienesSomos.png" /> @Html.ActionLink("Nosotros", "Nosotros", "Home")</div>
             @if (Session["usuario"] == null)
             {
-                <div class="nav__item"> @Html.ActionLink("Login", "Login", "Sesion")</div>
-                    <div class="nav__item"> @Html.ActionLink("Registrarse", "Registrarse", "Sesion")</div>
+                <div class="nav__item"> <img src="~/Content/iconos/Usuarios2.png" /> @Html.ActionLink("Login", "Login", "Sesion")</div>
+                    <div class="nav__item"><img src="~/Content/iconos/Registrar.png" /> @Html.ActionLink("Registrarse", "Registrarse", "Sesion")</div>
             }
             else
             {
@@ -44,11 +49,12 @@
                     <img src="~/Content/Logo Completo.png" />
                     <div class="izquierdo">
                         <nav class="menu">
-                            <p>Mándenos un Mail: <strong>mudanzasguaymas@gmail.com</strong> / Llámenos al Teléfono:<strong> 622-146-69-95</strong></p>
+                            
+                            <p>Mándenos un Mail: <strong>mudanzasguaymas@gmail.com</strong> / Llámenos al Teléfono:<strong> 622-146-69-95</strong> <br /></p>
                             <ul>
                                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("¿Quienes Somos", "Nosotros", "Home")</li>
-                                <li><a href="">Donde Estamos</a></li>
+                                <li>@Html.ActionLink("¿Quienes Somos?", "Nosotros", "Home")</li>
+                                
                                 @if (Session["usuario"] == null)
                                 {
                                     <li>@Html.ActionLink("Login", "Login", "Sesion")</li>
@@ -63,9 +69,9 @@
                                         <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
                                         <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
                                         <li>@Html.ActionLink("Citas", "Index", "Cita")</li>
-                                        <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
                                     }
                                     <li>@Html.ActionLink("Logout", "Logout", "Sesion")</li>
+                                    <li style="font-weight:900; color:#ff6a00;">@Session["email"]</li>
                                 }
                             </ul>
                         </nav>
